docfx/versioned/Spatial2D/0.8.0/en/concepts/geometry-model/curves.md
# Curves

Curves describe one-dimensional geometry in two-dimensional space. Spatial2D includes infinite
lines, rays, finite segments, circular arcs, and Bezier paths. They form the edges of
[contours](contours.md), provide distance and projection queries, and can act as sources for
fields and rasterizers.

Most curve types live in the <xref:Akeldov.Math.Spatial2D.Curves> namespace. Full circles and
other closed boundaries are contours, even though they support the common curve operations.

## Understand the curve model

The curve interfaces add capabilities instead of imposing one representation:

| Interface | Capability |
|---|---|
| <xref:Akeldov.Math.Spatial2D.Curves.ICurve> | Measures point distance, projects points, counts rightward crossings, and intersects rays. |
| <xref:Akeldov.Math.Spatial2D.Curves.IFiniteCurve> | Exposes a finite `Length` in world coordinate units. |
| <xref:Akeldov.Math.Spatial2D.Curves.IOneEndpointCurve> | Has one endpoint, as a ray does. |
| <xref:Akeldov.Math.Spatial2D.Curves.ITwoEndpointCurve> | Has two endpoints without defining a traversal order. |
| <xref:Akeldov.Math.Spatial2D.Curves.IParameterizedCurve> | Maps a curve coordinate to a point and reports that coordinate during projection. |
| <xref:Akeldov.Math.Spatial2D.Curves.IPath> | Adds ordered `StartPoint` and `EndPoint` properties to a parameterized curve. |
| <xref:Akeldov.Math.Spatial2D.Curves.IFinitePath> | Combines a finite length, ordered endpoints, and parameterization; this is the curve type used to build contours. |

Use the narrowest interface that expresses the operation. For example, an algorithm that only
needs proximity can accept `ICurve`, while an algorithm that walks from one endpoint to another
should accept `IFinitePath`.

## Choose a concrete curve

Choose a type from the curve's extent and whether traversal direction matters:

| Family | Type | Preview | Extent and curve-coordinate domain | Use when |
|---|---|---|---|---|
| Linear | <xref:Akeldov.Math.Spatial2D.Curves.Line> | <img src="/Akeldov.Math/assets/spatial2d/curves/line.png" width="64" height="64" alt="Distance rendering of Line"> | Infinite; not parameterized | Only the geometric line matters. |
| Linear | <xref:Akeldov.Math.Spatial2D.Curves.ParameterizedLine> | <img src="/Akeldov.Math/assets/spatial2d/curves/parameterized-line.png" width="64" height="64" alt="Distance rendering of ParameterizedLine with increasing thickness"> | Infinite; `(-infinity, +infinity)` | An origin, direction, and signed coordinate along the line are required. |
| Linear | <xref:Akeldov.Math.Spatial2D.Curves.Ray> | <img src="/Akeldov.Math/assets/spatial2d/curves/ray.png" width="64" height="64" alt="Distance rendering of Ray with increasing thickness"> | Half-infinite; `[0, +infinity)` | Geometry behind the origin must be excluded. |
| Linear | <xref:Akeldov.Math.Spatial2D.Curves.Segment> | <img src="/Akeldov.Math/assets/spatial2d/curves/segment.png" width="64" height="64" alt="Distance rendering of Segment"> | Finite; not parameterized | Endpoint order should not affect geometric identity. |
| Linear | <xref:Akeldov.Math.Spatial2D.Curves.ParameterizedSegment> | <img src="/Akeldov.Math/assets/spatial2d/curves/parameterized-segment.png" width="64" height="64" alt="Distance rendering of ParameterizedSegment with increasing thickness"> | Finite; `[0, Length]` | Direction or distance from the start point matters. |
| Linear | <xref:Akeldov.Math.Spatial2D.Curves.ParameterizedSegmentChain> | <img src="/Akeldov.Math/assets/spatial2d/curves/parameterized-segment-chain.png" width="64" height="64" alt="Distance rendering of ParameterizedSegmentChain with increasing thickness"> | Finite open polyline; `[0, Length]` | Consecutive segments should behave as one path. |
| Circular | <xref:Akeldov.Math.Spatial2D.Curves.Arc> | <img src="/Akeldov.Math/assets/spatial2d/curves/arc.png" width="64" height="64" alt="Distance rendering of Arc"> | Finite angular span; not parameterized | Only the arc geometry matters. |
| Circular | <xref:Akeldov.Math.Spatial2D.Curves.ParameterizedArc> | <img src="/Akeldov.Math/assets/spatial2d/curves/parameterized-arc.png" width="64" height="64" alt="Distance rendering of ParameterizedArc with increasing thickness"> | Directed angular span; `[0, Length]` | Clockwise or counterclockwise traversal matters. |
| Bezier | <xref:Akeldov.Math.Spatial2D.Curves.QuadraticBezier> | <img src="/Akeldov.Math/assets/spatial2d/curves/quadratic-bezier.png" width="64" height="64" alt="Distance rendering of QuadraticBezier with increasing thickness"> | Finite path; `[0, Length]` | One control point is sufficient. |
| Bezier | <xref:Akeldov.Math.Spatial2D.Curves.CubicBezier> | <img src="/Akeldov.Math/assets/spatial2d/curves/cubic-bezier.png" width="64" height="64" alt="Distance rendering of CubicBezier with increasing thickness"> | Finite path; `[0, Length]` | Separate outgoing and incoming control points are needed. |
| Bezier | <xref:Akeldov.Math.Spatial2D.Curves.BezierCurve> | <img src="/Akeldov.Math/assets/spatial2d/curves/cubic-bezier.png" width="64" height="64" alt="Distance rendering of a cubic BezierCurve with increasing thickness"> | Finite path; `[0, Length]` | The degree and control-point count are data-driven. |

Each preview is rasterized from the curve's distance field. On parameterized curves, the stroke
becomes thicker as the curve coordinate increases, making the traversal direction visible.

<xref:Akeldov.Math.Spatial2D.Contours.Circle> represents a complete circular boundary. Use
<xref:Akeldov.Math.Spatial2D.Contours.ParameterizedCircle> when a full circle also needs a
traversal origin and direction.

Angles passed to lines, rays, and arcs are expressed in radians. See
[Angles and Units](../fundamentals/angles-and-units.md) for the coordinate and rotation
conventions.

## Work with curve coordinates

Curve coordinates are distances measured in world coordinate units; they are not normalized to
`[0, 1]`. A finite path starts at coordinate `0` and ends at `Length`:

```csharp
using Akeldov.Math.Spatial2D;
using Akeldov.Math.Spatial2D.Curves;

var path = new ParameterizedSegment(
    startPoint: new PointXY(0f, 0f),
    endPoint: new PointXY(10f, 0f));

PointXY halfway = path.GetPoint(path.Length * 0.5f); // (5, 0)
```

Infinite parameterized lines use signed coordinates, and rays accept non-negative coordinates.
The direction stored by a path determines which endpoint has coordinate zero.

Bezier curves also expose `GetPointAt(t)`, where `t` is the normalized Bezier parameter in
`[0, 1]`. This parameter is not generally proportional to arc length. Use `GetPoint` when the
coordinate must represent distance along the approximated path.

## Project points and measure distance

Every `ICurve` can find its closest point to a sample. `Project` returns the projected point and
distance; `ProjectWithParameter` also returns the projected curve coordinate:

```csharp
var sample = new PointXY(4f, 3f);
ParameterizedCurveProjection projection = path.ProjectWithParameter(sample);

PointXY closest = projection.ProjectedPoint;  // (4, 0)
float coordinate = projection.CurveCoordinate; // 4
float distance = projection.Distance;          // 3
```

`Distance(point)` is the shorter choice when the closest position and curve coordinate are not
needed. Linear and circular types calculate these operations analytically. Bezier types use an
internal polyline approximation for length, projection, distance, and ray intersections.

## Intersect a curve with a ray

`GetRayIntersections` returns points in the forward direction of the supplied ray:

```csharp
using System.Collections.Generic;
using Akeldov.Math.Spatial2D.Contours;

var circle = new Circle(
    center: new PointXY(0f, 0f),
    radius: 5f);

var ray = new Ray(
    origin: new PointXY(-10f, 0f),
    angle: 0f);

List<PointXY> intersections = circle.GetRayIntersections(ray);
```

The returned list is new, mutable, and owned by the caller. The optional `geometryEpsilon`
argument is measured in world coordinate units and controls comparisons near tangencies,
endpoints, collinear overlaps, and nearly parallel curves.

`CountRightwardCrossings` is a specialized crossing query used by containment algorithms. It
uses a half-open endpoint rule so shared vertices are not counted twice.

## Build larger geometry

An `IFinitePath` has the ordered endpoints required to join curves into a contour. Consecutive
paths must meet end-to-start, and a closed contour must connect its final endpoint back to its
first endpoint. The contour can then define the outer boundary or a hole of a
[region](regions.md).

For practical examples, see:

- [Project a point onto a curve](../../how-to-guides/curves-and-contours/project-a-point-onto-a-curve.md)
- [Find curve intersections](../../how-to-guides/curves-and-contours/find-curve-intersections.md)
- [Build a closed contour](../../how-to-guides/curves-and-contours/build-a-closed-contour.md)
- [Curves and transformations tutorial](../../tutorials/2d-geometry-fundamentals/curves-and-transformations.md)
